--- a/TopologyPreservingSimplifier/TopologyPreservingSimplifier.csproj
+++ b/TopologyPreservingSimplifier/TopologyPreservingSimplifier.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NetTopologySuite" Version="1.15.0" />
+    <PackageReference Include="NetTopologySuite.IO.GeoJSON" Version="1.15.0" />
+  </ItemGroup>
+
 </Project>
